--- a/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
+++ b/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
@@ -16,15 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
-                                <rect key="frame" x="271" y="50" width="52" height="24"/>
-                                <state key="normal" title="SKIP ">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uca-Of-E2p">
                                 <rect key="frame" x="24" y="783" width="366" height="55"/>
                                 <color key="backgroundColor" name="mainColor"/>
@@ -65,46 +56,53 @@
                                     <constraint firstAttribute="width" secondItem="xoe-4b-d9A" secondAttribute="height" multiplier="327:93" id="gkx-ys-I29"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBU-m6-0IH">
-                                <rect key="frame" x="322" y="60" width="30" height="24"/>
+                            <button autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
+                                <rect key="frame" x="230" y="60" width="160" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="4nR-5b-zeK"/>
+                                    <constraint firstAttribute="width" constant="160" id="8RD-2s-VM5"/>
+                                    <constraint firstAttribute="height" constant="24" id="OUa-Mk-9yh"/>
                                 </constraints>
-                            </imageView>
-                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="7" translatesAutoresizingMaskIntoConstraints="NO" id="Q0w-Jm-HYf">
-                                <rect key="frame" x="28" y="731" width="366" height="28"/>
-                            </pageControl>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="qMo-h0-UhL" customClass="UIPageControlStackView" customModule="INTITA" customModuleProvider="target">
+                                <rect key="frame" x="93" y="735" width="228" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="228" id="H8Y-3f-E7v"/>
+                                    <constraint firstAttribute="height" constant="24" id="bo3-wW-c8h"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uca-Of-E2p" secondAttribute="bottom" constant="24" id="2Pi-gk-fQt"/>
+                            <constraint firstItem="uca-Of-E2p" firstAttribute="top" secondItem="qMo-h0-UhL" secondAttribute="bottom" constant="24" id="6na-6c-bYg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JCo-XY-WyK" secondAttribute="trailing" constant="24" id="8be-Tc-Jrs"/>
                             <constraint firstItem="uca-Of-E2p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="8ga-3K-Yw4"/>
-                            <constraint firstItem="ZBU-m6-0IH" firstAttribute="leading" secondItem="ahv-DJ-VZD" secondAttribute="trailing" id="A3m-xj-8XI"/>
-                            <constraint firstItem="Q0w-Jm-HYf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="4" id="B3V-e4-hUd"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="top" secondItem="JCo-XY-WyK" secondAttribute="bottom" constant="30" id="D7h-sG-eRn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uca-Of-E2p" secondAttribute="trailing" constant="24" id="DFn-7D-Jsn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZBU-m6-0IH" secondAttribute="trailing" constant="24" id="HVL-1d-Kz3"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="KYs-95-qgv"/>
-                            <constraint firstItem="ZBU-m6-0IH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Tcm-x1-kOt"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UUX-ci-IPF"/>
-                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="height" secondItem="ZBU-m6-0IH" secondAttribute="height" id="bHy-ZH-JmQ"/>
+                            <constraint firstItem="qMo-h0-UhL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="aYs-ve-VwM"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ahv-DJ-VZD" secondAttribute="bottom" constant="24" id="eAo-lO-aGe"/>
                             <constraint firstItem="xoe-4b-d9A" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hvV-tc-Mwc"/>
-                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ahv-DJ-VZD" secondAttribute="bottom" constant="24" id="k9R-Vp-bYu"/>
                             <constraint firstItem="ahv-DJ-VZD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ody-wK-Hd7"/>
-                            <constraint firstItem="uca-Of-E2p" firstAttribute="top" secondItem="Q0w-Jm-HYf" secondAttribute="bottom" constant="24" id="p8U-Kj-B9B"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="top" secondItem="xoe-4b-d9A" secondAttribute="bottom" constant="35" id="qXR-jl-a7y"/>
-                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ZBU-m6-0IH" secondAttribute="bottom" constant="24" id="xct-q9-11O"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ahv-DJ-VZD" secondAttribute="trailing" constant="24" id="zmk-am-k87"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="arrowImg" destination="ZBU-m6-0IH" id="dtz-gW-jE2"/>
                         <outlet property="line" destination="ge6-SB-pzY" id="h2F-07-mqx"/>
                         <outlet property="logo" destination="xoe-4b-d9A" id="QJp-Ra-STh"/>
                         <outlet property="mottoLabel" destination="JCo-XY-WyK" id="sTx-FI-Z3E"/>
-                        <outlet property="pageControl" destination="Q0w-Jm-HYf" id="3JR-r9-jbj"/>
                         <outlet property="skipBtn" destination="ahv-DJ-VZD" id="ole-J4-FV0"/>
+                        <outlet property="stackViewPageControl" destination="qMo-h0-UhL" id="HvB-rJ-h61"/>
                         <outlet property="startBtn" destination="uca-Of-E2p" id="TTc-r6-Hyx"/>
                     </connections>
                 </viewController>
