--- a/INTITA/Modules/Settings/SettingsProfile.storyboard
+++ b/INTITA/Modules/Settings/SettingsProfile.storyboard
@@ -9,41 +9,31 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Settings View Controller-->
+        <!--Settings Profile View Controller-->
         <scene sceneID="HQH-HS-Y9E">
             <objects>
-                <viewController storyboardIdentifier="SettingsViewController" id="SB3-BW-lIE" customClass="SettingsViewController" customModule="INTITA" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsProfileViewController" id="SB3-BW-lIE" customClass="SettingsProfileViewController" customModule="INTITA" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Dg-D4-xHT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G8j-Qq-Nlp">
-                                <rect key="frame" x="0.0" y="44" width="414" height="188"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <color key="tintColor" systemColor="opaqueSeparatorColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="188" id="3US-fx-97A"/>
-                                </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cjb-vl-QM8">
-                                <rect key="frame" x="0.0" y="232" width="414" height="664"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cjb-vl-QM8">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Npq-ax-oex"/>
                         <color key="backgroundColor" name="mainColor"/>
+                        <color key="tintColor" name="mainColor"/>
                         <constraints>
                             <constraint firstItem="Cjb-vl-QM8" firstAttribute="leading" secondItem="Npq-ax-oex" secondAttribute="leading" id="8ZK-a4-9rm"/>
-                            <constraint firstItem="Cjb-vl-QM8" firstAttribute="top" secondItem="G8j-Qq-Nlp" secondAttribute="bottom" id="Bfi-jJ-kow"/>
-                            <constraint firstItem="Npq-ax-oex" firstAttribute="trailing" secondItem="G8j-Qq-Nlp" secondAttribute="trailing" id="Cae-1s-0r1"/>
-                            <constraint firstItem="Npq-ax-oex" firstAttribute="bottom" secondItem="Cjb-vl-QM8" secondAttribute="bottom" id="NQF-Nz-8i7"/>
+                            <constraint firstItem="Npq-ax-oex" firstAttribute="bottom" secondItem="Cjb-vl-QM8" secondAttribute="bottom" constant="-34" id="NQF-Nz-8i7"/>
                             <constraint firstItem="Npq-ax-oex" firstAttribute="trailing" secondItem="Cjb-vl-QM8" secondAttribute="trailing" id="OHo-OQ-kha"/>
-                            <constraint firstItem="G8j-Qq-Nlp" firstAttribute="top" secondItem="Npq-ax-oex" secondAttribute="top" id="QeL-Q9-Qc7"/>
-                            <constraint firstItem="G8j-Qq-Nlp" firstAttribute="leading" secondItem="Npq-ax-oex" secondAttribute="leading" id="b5y-bO-o9x"/>
+                            <constraint firstItem="Cjb-vl-QM8" firstAttribute="top" secondItem="Npq-ax-oex" secondAttribute="top" id="y7S-oz-hDO"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
-                        <outlet property="headerView" destination="G8j-Qq-Nlp" id="pGp-N6-ORF"/>
                         <outlet property="tableView" destination="Cjb-vl-QM8" id="kE8-9V-rTH"/>
                     </connections>
                 </viewController>
@@ -56,9 +46,6 @@
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
