--- a/INTITA/Modules/Profile/Cells/ProfileHeaderViewCell.xib
+++ b/INTITA/Modules/Profile/Cells/ProfileHeaderViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,15 +31,32 @@
                                     <constraint firstAttribute="height" constant="30" id="qYQ-2a-TMA"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5Ol-Yq-f6n">
                                 <rect key="frame" x="58" y="242" width="358" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="NcS-yN-4i1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" text="Surname" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7du-MQ-zLd">
+                                        <rect key="frame" x="183" y="0.0" width="175" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="4Jf-HY-EPj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="NcS-yN-4i1"/>
+                                    <constraint firstAttribute="height" constant="30" id="v2a-OB-Pgm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Sp-0J-kPW">
                                 <rect key="frame" x="176" y="97" width="122" height="122"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -84,21 +101,19 @@
                         <color key="backgroundColor" name="mainColor"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Qse-Hb-MYw" secondAttribute="trailing" constant="58" id="5UL-w9-xEH"/>
                             <constraint firstItem="lJd-YN-elw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="94m-0Y-rwy"/>
-                            <constraint firstItem="ij8-dx-qrF" firstAttribute="top" secondItem="Qse-Hb-MYw" secondAttribute="bottom" constant="8" id="AcG-xt-Py9"/>
                             <constraint firstItem="amO-lp-LyI" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="Bes-gJ-OmI"/>
+                            <constraint firstItem="ij8-dx-qrF" firstAttribute="top" secondItem="5Ol-Yq-f6n" secondAttribute="bottom" constant="8" id="EPM-y4-rDY"/>
                             <constraint firstItem="Ua9-CR-JUF" firstAttribute="top" relation="lessThanOrEqual" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="88" id="GUr-pC-fZH"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" relation="lessThanOrEqual" secondItem="amO-lp-LyI" secondAttribute="bottom" constant="40" id="JBG-90-cOu"/>
                             <constraint firstItem="2Sp-0J-kPW" firstAttribute="centerX" secondItem="amO-lp-LyI" secondAttribute="centerX" id="JaV-L3-3cR"/>
                             <constraint firstItem="2Sp-0J-kPW" firstAttribute="centerY" secondItem="amO-lp-LyI" secondAttribute="centerY" id="Jgm-Y2-BnY"/>
                             <constraint firstAttribute="trailing" secondItem="ij8-dx-qrF" secondAttribute="trailing" constant="58" id="NRi-sW-6Ah"/>
+                            <constraint firstAttribute="trailing" secondItem="5Ol-Yq-f6n" secondAttribute="trailing" constant="58" id="OjJ-a9-2jb"/>
                             <constraint firstItem="amO-lp-LyI" firstAttribute="top" secondItem="Ua9-CR-JUF" secondAttribute="bottom" id="SXU-8F-EEn"/>
                             <constraint firstAttribute="bottom" secondItem="ij8-dx-qrF" secondAttribute="bottom" constant="20" id="VfP-3J-YjS"/>
                             <constraint firstItem="ij8-dx-qrF" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="58" id="g4C-yK-Mr4"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" relation="lessThanOrEqual" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="242" id="ibH-qa-pIo"/>
                             <constraint firstItem="Ua9-CR-JUF" firstAttribute="trailing" secondItem="amO-lp-LyI" secondAttribute="trailing" id="j7m-m3-Ctd"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="58" id="kQ3-hl-vwh"/>
+                            <constraint firstItem="5Ol-Yq-f6n" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="58" id="tx0-cQ-jIG"/>
                             <constraint firstItem="amO-lp-LyI" firstAttribute="centerY" secondItem="ugS-Oe-Uut" secondAttribute="centerY" id="udf-a0-2vW"/>
                             <constraint firstItem="2Sp-0J-kPW" firstAttribute="height" secondItem="amO-lp-LyI" secondAttribute="height" constant="32" id="xIG-Lj-deZ"/>
                             <constraint firstItem="lJd-YN-elw" firstAttribute="top" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="20" id="xpk-E7-7Li"/>
@@ -124,6 +139,7 @@
                 <outlet property="logoView" destination="lJd-YN-elw" id="FHo-nl-qwo"/>
                 <outlet property="nameLabel" destination="Qse-Hb-MYw" id="9Ph-K4-79c"/>
                 <outlet property="specializationLabel" destination="ij8-dx-qrF" id="Vzf-bj-54j"/>
+                <outlet property="surnameLabel" destination="7du-MQ-zLd" id="tnk-Pn-IXu"/>
             </connections>
             <point key="canvasLocation" x="186.95652173913044" y="103.125"/>
         </tableViewCell>
