--- a/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
+++ b/INTITA/Modules/OpportunitiesScreen/Cells/OpportunitiesTableViewCell.xib
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,6 +18,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vn-LC-Gwf">
+                        <rect key="frame" x="0.0" y="0.0" width="319" height="120"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="120" id="KFq-jH-97e"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-Wv-LiH">
                         <rect key="frame" x="20" y="21" width="279" height="25"/>
                         <constraints>
@@ -53,14 +61,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EiE-BS-c4u">
-                        <rect key="frame" x="150.5" y="37" width="18.5" height="22"/>
+                        <rect key="frame" x="150.5" y="45" width="18.5" height="22"/>
                         <state key="normal" image="chevron.down" catalog="system"/>
                         <connections>
                             <action selector="downButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="6Xs-Ct-HkQ"/>
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xhg-Q9-j8e">
-                        <rect key="frame" x="50" y="91" width="35.5" height="17"/>
+                        <rect key="frame" x="50" y="94" width="35.5" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -75,9 +83,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="FlO-d7-4Pb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="7As-EB-iiG"/>
+                    <constraint firstItem="Xhg-Q9-j8e" firstAttribute="top" secondItem="FlO-d7-4Pb" secondAttribute="bottom" constant="8" id="8Ai-ZI-K4Q"/>
                     <constraint firstItem="zgt-zz-W9t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="8bJ-ay-LKb"/>
                     <constraint firstAttribute="trailing" secondItem="jtw-jn-igU" secondAttribute="trailing" constant="20" id="FhZ-qo-H8h"/>
-                    <constraint firstItem="EiE-BS-c4u" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" constant="16" id="GuM-DI-U0Q"/>
+                    <constraint firstItem="EiE-BS-c4u" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" constant="24" id="GuM-DI-U0Q"/>
+                    <constraint firstItem="7vn-LC-Gwf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Gx5-WB-yRW"/>
+                    <constraint firstItem="7vn-LC-Gwf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="GxG-4K-VSr"/>
                     <constraint firstItem="jtw-jn-igU" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" constant="4" id="MEa-2H-RpI"/>
                     <constraint firstItem="K6Q-9p-nox" firstAttribute="top" secondItem="ygo-Wv-LiH" secondAttribute="bottom" constant="10" id="ZT0-gG-b9w"/>
                     <constraint firstItem="EiE-BS-c4u" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="fxg-2A-lpZ"/>
@@ -86,20 +97,23 @@
                     <constraint firstAttribute="trailing" secondItem="ygo-Wv-LiH" secondAttribute="trailing" constant="20" id="jRH-Nz-nB4"/>
                     <constraint firstItem="Xhg-Q9-j8e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="oSl-VY-Yp2"/>
                     <constraint firstItem="jtw-jn-igU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="p3K-vO-jz3"/>
+                    <constraint firstAttribute="trailing" secondItem="7vn-LC-Gwf" secondAttribute="trailing" id="p7k-ik-1Fm"/>
                     <constraint firstItem="FlO-d7-4Pb" firstAttribute="top" secondItem="K6Q-9p-nox" secondAttribute="bottom" constant="12" id="qc9-fJ-44a"/>
                     <constraint firstItem="ygo-Wv-LiH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="qpJ-Ph-AZe"/>
                     <constraint firstAttribute="trailing" secondItem="zgt-zz-W9t" secondAttribute="trailing" constant="20" id="sGi-hu-AXT"/>
                     <constraint firstAttribute="trailing" secondItem="FlO-d7-4Pb" secondAttribute="trailing" constant="20" id="sGq-ZX-e6Z"/>
-                    <constraint firstAttribute="bottom" secondItem="Xhg-Q9-j8e" secondAttribute="bottom" constant="12" id="tJL-L3-u51"/>
                     <constraint firstItem="ygo-Wv-LiH" firstAttribute="top" secondItem="zgt-zz-W9t" secondAttribute="bottom" id="wsj-Hy-CCj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="downButton" destination="EiE-BS-c4u" id="wEZ-G7-ren"/>
                 <outlet property="financeLabel" destination="Xhg-Q9-j8e" id="b1P-xy-qnU"/>
                 <outlet property="firstLineView" destination="jtw-jn-igU" id="XHC-GJ-LsY"/>
+                <outlet property="heightOfViewConstraint" destination="KFq-jH-97e" id="edO-pR-gZ4"/>
                 <outlet property="infoLabel" destination="ygo-Wv-LiH" id="g2b-aR-PEO"/>
                 <outlet property="mainLabel" destination="zgt-zz-W9t" id="v80-UR-5uG"/>
+                <outlet property="mainView" destination="7vn-LC-Gwf" id="HLJ-84-Y4f"/>
                 <outlet property="secondLineView" destination="FlO-d7-4Pb" id="hHC-1Q-dbd"/>
                 <outlet property="taskLabel" destination="K6Q-9p-nox" id="m2D-GS-QyD"/>
             </connections>
@@ -111,5 +125,8 @@
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
